tests/ui/lexer/lex-stray-backslash.rs
\ //~ ERROR: unknown start of token: \

fn main() {}

// ferrocene-annotations: fls_wb86edg02t6a
// Items
